--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "hardhat": "^2.22.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
