--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.423.0",
+    "magic-sdk": "^28.2.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
