--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.18.7",
+    "web3": "^4.11.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
