--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ ASTRIA_API_KEY=
 MONGODB_URI=
 NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_BLOCKCHAIN_NETWORK=
+NEXT_PUBLIC_WLD_APP_ID=
+NEXT_PUBLIC_WLD_ACTION=
