--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@worldcoin/idkit": "^1.2.2",
+    "@worldcoin/idkit-core": "^1.2.2",
     "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "draw-dash": "file:",
     "lucide-react": "^0.423.0",
     "magic-sdk": "^28.2.0",
     "mongoose": "^8.5.2",
