Feat: Update on the game pages
Made the pages dynamic and added App bar for all of them

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ ASTRIA_API_KEY=
 MONGODB_URI=
 NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_BLOCKCHAIN_NETWORK=
+NEXT_PUBLIC_WLD_APP_ID="app_staging_2cdaabaaf5974584da2f391b081e3171"
+NEXT_PUBLIC_WLD_ACTION="testing-action"
