--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "magic-sdk": "^6.0.2",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
