--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "draw-dash": "file:",
+    "ethers": "^6.13.2",
     "lucide-react": "^0.423.0",
-    "magic-sdk": "^6.0.2",
+    "magic-sdk": "^28.0.3",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "openai": "^4.55.4",
