feat: add minipay button

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
@@ -28,7 +29,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "draw-dash": "file:",
-    "ethers": "^6.13.2",
     "lucide-react": "^0.423.0",
     "magic-sdk": "^28.0.3",
     "mongoose": "^8.5.2",
