--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "draw-dash": "file:",
     "lucide-react": "^0.423.0",
     "magic-sdk": "^28.2.0",
